Yeni dəyişikliklər əlavə olundu

--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,7 @@
 
     <main>
         <h1 class="text-xl font-bold mt-9">Kateqoriyalar</h1>
-        <div class="btn mt-5 flex gap-10 flex-wrapgit init">
+        <div class="btn mt-5 flex gap-10 flex-wrap">
             <button onclick="btn1()" class="p-3 rounded-2xl bg-gray-200 transition-colors duration-300 hover:bg-gray-300">Hamisi</button>
             <button onclick="btn2()" class="p-3 rounded-2xl bg-gray-200 transition-colors duration-300 hover:bg-gray-300">Qadin
                 Geyimleri</button>
